# Remote-Connection-Client

./: CMakeLists.txt  LICENSE  README.md
Sources/: CMakeLists.txt
Sources/Core/: CMakeLists.txt  MyFtp.cpp  MyFtp.h
Sources/Utils/: CMakeLists.txt  MyString.cpp  MyString.h
Sources/Window/: CMakeLists.txt  ftpwidget.cpp  ftpwidget.h  ftpwidget.ui  main.cpp  mylistdialog.cpp  mylistdialog.h  mylistdialog.ui  mymainwindow.cpp  mymainwindow.h  mymainwindow.ui
lib/: Core.lib  Utils.lib
